--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -10,17 +10,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.2
+
+  #build value
+  json_annotation: ^3.0.1
+
+  #state management
+  equatable: ^1.2.3
+  bloc: ^6.0.2
+
+  #testing
+  bloc_test: ^7.0.3
+  mockito: ^4.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.1
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -31,7 +44,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
